changed gallery styles and markup to remove <ul> list of file locations

--- a/dev/photo-gallery/index.html
+++ b/dev/photo-gallery/index.html
@@ -25,16 +25,13 @@
       </div>
 
       <div class="gallery-thumbnails">
-        <div></div>
-        <ul>
-          <li>/images/2017-NURSES-NIGHT-AT-THE-ROCKIES.jpg</li>
-          <li>/images/american-ninja-warrior-2017.jpg</li>
-          <li>/images/armstrong-excellence-april-2017.jpg</li>
-          <li>/images/fnp-dental-students.jpg</li>
-          <li>/images/harpin-comm-engagement-2017.jpg</li>
-          <li>/images/japanese-visitors-prag.jpg</li>
-          <li>/images/spring-potluck-2017.jpg</li>
-        </ul>
+        <img src="/images/2017-NURSES-NIGHT-AT-THE-ROCKIES.jpg" alt="">
+        <img src="/images/american-ninja-warrior-2017.jpg" alt="">
+        <img src="/images/armstrong-excellence-april-2017.jpg" alt="">
+        <img src="/images/fnp-dental-students.jpg" alt="">
+        <img src="/images/harpin-comm-engagement-2017.jpg" alt="">
+        <img src="/images/japanese-visitors-prag.jpg" alt="">
+        <img src="/images/spring-potluck-2017.jpg" alt="">
       </div>
 
       <div class="lightbox">
