ORS and DTL pages created/updated

--- a/dev/custom-pages/dtl-pages/faculty-development.html
+++ b/dev/custom-pages/dtl-pages/faculty-development.html
@@ -56,10 +56,10 @@
           <section class="width-45">
             <h4>Fun Facts</h4>
             <ul>
-              <li>Candy spent 15 years each spring break working with nursing students to provide health care and health education to Wyoming native tribes, Shoshone and Arapaho, on the Wind River Reservation</li>
-              <li>Candy had a dog as a child named Black-eye</li>
-              <li>Candy has two children and two grandchildren</li> 
-              <li>Candy is great at putting together snack buffets</li>
+              <li>Candy spent 15 years each spring break working with nursing students to provide health care and health education to Wyoming native tribes, Shoshone and Arapaho, on the Wind River Reservation.</li>
+              <li>Candy had a dog as a child named Black-eye.</li>
+              <li>Candy has two children and two grandchildren.</li> 
+              <li>Candy is great at putting together snack buffets.</li>
               <li>If you want to make Candy smile, just say, “Hello!”</li>
             </ul>            
           </section>
@@ -168,11 +168,11 @@
       </ul>
     </li>
     <li><a href="https://www.ydae.purdue.edu/lct/hbcu/documents/Active_Learning_Creating_Excitement_in_the_Classroom.pdf" target="_blank">Active Learning</a></li>
-    <li><a href="http://gsi.berkeley.edu/gsi-guide-contents/learning-theory-research/learning-overview/v" target="_blank">Learning Theories</a></li>
+    <li><a href="http://gsi.berkeley.edu/gsi-guide-contents/learning-theory-research" target="_blank">Learning Theories</a></li>
     <li><a href="http://teachinginhighered.com/episodes/" target="_blank">Podcasts on teaching, student learning, and issues in higher education</a></li>
     <li><a href="http://www.washington.edu/teaching/constructing-tests/" target="_blank">Exam Design and Analysis </a></li>
     <li><a href="http://teachingcenter.wustl.edu/resources/teaching-methods/discussions/discussion-strategies/" target="_blank">Facilitating Group Discussion</a></li>
-    <li><a href="https://www.ncbi.nlm.nih.gov/pubmed/2522328" target="_blank">Scholarship of Teaching and Learning</a></li>
+    <li><a href="https://www.ncbi.nlm.nih.gov/pubmed/25223284" target="_blank">Scholarship of Teaching and Learning</a></li>
     <li><a href="http://www.nln.org/professional-development-programs/Certification-for-Nurse-Educators" target="_blank">Nurse Educator Certification</a></li>
   </ul>
 </section>
