--- a/dev/custom-pages/dtl-pages/instructional-design.html
+++ b/dev/custom-pages/dtl-pages/instructional-design.html
@@ -60,9 +60,9 @@
             <h4>Fun Facts</h4>  
             <ul>
               <li>Glenda has three children, two boys and one girl. The youngest are twins!</li>
-              <li>Sophia loves to sail</li>
-              <li>Glenda is resourceful in strategizing</li>
-              <li>Sophia is creative in engaging crowds</li>
+              <li>Sophia loves to sail.</li>
+              <li>Glenda is resourceful in strategizing.</li>
+              <li>Sophia is creative in engaging crowds.</li>
             </ul>
           </section>
          
@@ -92,7 +92,7 @@
 
   <header>
     <h2>How We Do It</h2>
-    <p>We use Instructional Design Theory and learning theory to guide our design and best practices. Instructional Design is a mixture of cognitive, developmental, educational, and social psychology. We apply our understanding of how learning happens at various developmental stages within educational settings while considering social relationships</p>
+    <p>We use Instructional Design Theory and learning theory to guide our design and best practices. Instructional Design is a mixture of cognitive, developmental, educational, and social psychology. We apply our understanding of how learning happens at various developmental stages within educational settings while considering social relationships.</p>
     <p>Luckily, we have guiding theories to aid in design decisions.</p>
   </header>
   
