updates made to faculty-development custom intranet page

--- a/dev/custom-pages/dtl-pages/faculty-development.html
+++ b/dev/custom-pages/dtl-pages/faculty-development.html
@@ -155,6 +155,7 @@
 <section>
   <h2>Resources</h2>
   <ul class="column-list two between">
+    <li><a href="/academic-programs/design-teach-learn/Documents/dtl-faculty-dev-events.pdf" target="_blank">DTL Faculty Development Events (PDF)</a></li>
     <li>Learning Assessment and Evaluation Techniques
       <ul>
         <li><a href="https://cft.vanderbilt.edu/guides-sub-pages/cats/" target="_blank">Classroom Assessment Techniques (CATs)</a></li>
